--- a/thesis/tex/intro.tex
+++ b/thesis/tex/intro.tex
@@ -1,27 +1,27 @@
 \chapter{Wstęp}
 \section{Wprowadzenie}
-Sztuczna inteligencja to dziedzina wywodząca się z informatyki. Jej początki wywodzą się z lat pięćdziesiątych XX wieku. Jeden z pierwszych badaczy,  John McCarthy, określił sztuczną inteligencję jako ,,naukę i technikę tworząca inteligentne maszyny''. Pomimo zmian, jakie dokonały się w przeciągu kolejnych 60 lat, definicję tą wciąż można uznać za aktualną. Sztuczna inteligencja obejmuje kilka zagadnień, między innymi logikę rozmytą, sieci neuronowe czy planowanie \cite{ai}.
+Sztuczna inteligencja to dziedzina wywodząca się z informatyki. Jej początki sięgają lat pięćdziesiątych XX wieku. Jeden z pierwszych badaczy,  John McCarthy, określił sztuczną inteligencję jako ,,naukę i technikę tworzącą inteligentne maszyny''. Pomimo zmian, jakie dokonały się w przeciągu kolejnych 60 lat, definicję tą wciąż można uznać za aktualną. Sztuczna inteligencja obejmuje kilka zagadnień, między innymi logikę rozmytą, sieci neuronowe czy planowanie \cite{ai}.
 
-	Automatyczne planowanie jest dziedziną sztucznej inteligencji, która zajmuje się realizacją sekwencji akcji oraz strategii \cite{planning}. Innymi słowy, zadaniem automatycznego planowania jest takie pokierwanie akcjami, by z stanu początkowego dotrzeć do określonego stanu końcowego (celu). Najczęściej wymagany jest również jak najmniejszy czas, lub koszt, wykonania ułożonego planu. Istnieje kilka powszechnie znanych języków formalnych, umożliwiających wyrażanie problemu automatycznego planowania. Najbardziej znane języki to STRIPS (\textit{Stanford Research Institute Problem Solver}) \cite{strips} oraz PDDL(\textit{Planning Domain Definition Language}) \cite{pddl}, który jest jednym z ważniejszych elementów tej pracy.
+Automatyczne planowanie jest dziedziną sztucznej inteligencji, która zajmuje się realizacją sekwencji akcji oraz strategii \cite{planning}. Innymi słowy, zadaniem automatycznego planowania jest takie pokierwanie akcjami, by ze stanu początkowego dotrzeć do określonego stanu końcowego (celu). Najczęściej wymagany jest również jak najmniejszy czas, lub koszt, wykonania ułożonego planu. Istnieje kilka powszechnie znanych języków formalnych, umożliwiających wyrażanie problemu automatycznego planowania. Najbardziej znane języki to STRIPS (\textit{Stanford Research Institute Problem Solver}) \cite{strips} oraz PDDL (\textit{Planning Domain Definition Language}) \cite{pddl}, na którym opiera się projekt będący przedmiotem niniejszej pracy.
 	
-	Język PDDL jest jednym z wyspecjalizowanych języków służących do opisu zagadnień związanych z automatycznym planowaniem. Został stworzony specjalnie na międzynarodowy konkurs planistyczny (IPC - \emph{International Planning Competition}), mający miejsce w 1998 roku. Wzorowany był na innych językach wyspecjalizowanych w automatycznym planowaniu, między innymi na STRIPS'ie. W niektórych częściach języka PDDL można dostrzec podobieństwo do jego wzorca (na przykład w definiowanych akcjach), jednakże posiada on odmienną składnie.   
+Język PDDL jest jednym z wyspecjalizowanych języków służących do opisu zagadnień związanych z automatycznym planowaniem. Został stworzony z przeznaczeniem na międzynarodowy konkurs planistyczny (IPC - \emph{International Planning Competition}), mający miejsce w 1998 roku. Wzorowany był na innych językach wyspecjalizowanych w automatycznym planowaniu, między innymi na STRIPS'ie. W niektórych częściach języka PDDL można dostrzec podobieństwo do jego wzorca (na przykład w definiowanych akcjach), jednakże posiada on odmienną składnię.   
 
 W celu wydajnego tworzenia oprogramowania, programiści korzystają z rozmaitych narzędzi. Zdarza się jednak, że samo ich wyszukiwanie i instalacja w systemie operacyjnym, zajmuje więcej czasu niż stworzenie programu. Rozwiązaniem są środowiska programistyczne, zapewniające w większości przypadków podstawowe funkcjonalności, oraz możliwość łatwego wyszukiwania i komponowania potrzebnych narzędzi.
 
 \section{Motywacja}
-Pomimo stworzenia PDDL, autorzy nie zapewnił odpowiedniego środowiska programistycznego. Problemem jest również znalezienie odpowiedniego narzędzia. Obecnie dostępne rozwiązania posiadają istotne wady. Są to między innymi brak możliwości pracy z innym systemem  niż Windows, brakiem odpowiedniego formatowania kodu czy nieodpowiednim kolorowaniem składni. Założeniem projektu GUI4PDDL jest rozwiązanie większości niedogodności związanych z pisaniem w języku PDDL.
+Pomimo stworzenia PDDL, autorzy nie zapewnili odpowiedniego środowiska programistycznego. Problemem jest również znalezienie istniejącego, w pełni funkcjonalnego narzędzia. Obecnie dostępne rozwiązania posiadają istotne wady. Są to między innymi brak możliwości pracy z innym systemem  niż Windows, brakiem odpowiedniego formatowania kodu czy nieodpowiednim kolorowaniem składni. Założeniem projektu GUI4PDDL jest rozwiązanie większości niedogodności związanych z pisaniem programów w języku PDDL.
 \section{Cel i zakres pracy}
-Celem pracy jest stworzenie stworzenie graficznego środowiska programistycznego umożliwiającego pisanie programów w języku PDDL. Ważniejsze założenia projektu GUI4PDDL to tworzenie automatycznych wcięć i kolorowanie składni, przez co zwiększa się przejrzystość kodu źródłowego. Kolejnymi znaczącymi założeniami są podpowiadanie składni oraz wykrywanie błędów w kodzie źródłowym, co powinno ułatwiać programiście tworzenie programu. Następnym ważnym elementem jest zarządzanie projektami oraz plikami. Dodatkowo, w~związku z wykorzystaniem dużej ilości nawiasów w PDDL, wymagane jest ich dopasowywanie. 
+Celem pracy jest stworzenie graficznego środowiska programistycznego, umożliwiającego pisanie programów w języku PDDL. Środowisko to powinno dostarczać przede wszystkim edytor kodu, zapewniający tworzenie automatycznych wcięć i kolorowanie składni, co pozwala zwiększyć przejrzystość struktury programu. Znaczącymi założeniami edytora są także podpowiadanie składni oraz wykrywanie błędów w kodzie źródłowym, które przyspieszają proces przygotowywania projektu. Dodatkowo, w~związku z wykorzystaniem dużej ilości nawiasów w PDDL, wymagane jest ich dopasowywanie. Dostępna powinna być również możliwość uruchamiania zewnętrznego oprogramowania do wyznaczania planu i przeglądania wyników planowania oraz zarządzania projektami i plikami.  
 
-W pierwszej części drugiego rozdziału, przedstawiona została problematyka automatycznego planowania. W drugim fragmencie opisany jest język PDDL, a następnie opisano najważniejsze narzędzia służące do planowania.
+W pierwszej części drugiego rozdziału, przedstawiona została problematyka automatycznego planowania. W rozdziale~\ref{sec:jezykpddl} opisany jest język PDDL, a następnie (roz.~\ref{sec:oprogramowanie}) opisano najważniejsze narzędzia służące do przeprowadzania procesu planowania.
 
 Kolejny rozdział to opis wymagań funkcjonalnych oraz wymagań pozafunkcjonalnych.
 
 Rozdział czwarty podzielony jest na dwie części. W pierwszej z nich opisane jest środowisko programistyczne Eclipse, w którym stworzona została wtyczka GUI4PDDL. Jest to również środowisko, na którym docelowo ma działać stworzony projekt. W drugiej części opisany został generator analizatorów składniowych ANTLR.
 
-W rozdziale piątym przedstawiono podział całego projektu na mniejsze projekty Eclipse. Opisana jest tu również szczegółowa zawartość każdej osobnej wtyczki.
+W rozdziale piątym przedstawiono architekturę tworzonego systemu, uwzględniając jego podział na projekty platformy \emph{Eclipse}. Opisana jest tu również szczegółowa zawartość każdego pakietu głównego projektu.
 
-Następny rozdział zawiera szczegółowe przedstawienie implementacji najważniejszych funkcjonalności. Opisane są tu kwestie tworzenia nowego projektu PDDL oraz nowych plików PDDL. Dalej przedstawione są kolorowanie kodu, automatyczne wcięcia, dopasowanie nawiasów oraz kwestie związane obsługą podpowiedzi. W kolejnej części ukazano zagadnienia związane z przetwarzaniem kodu PDDL: wykrywanie błędów składniowych i semantycznych, podpowiadanie kodu. Na końcu omówiono kwestię współpracy z oprogramowaniem wyznaczającym plan, czyli konfiguracje i uruchamianie zewnętrznego planera oraz przerywanie procesu planowania.
+Następny rozdział zawiera szczegółowe przedstawienie implementacji najważniejszych funkcjonalności. Opisane są tu kwestie tworzenia nowego projektu PDDL oraz nowych plików PDDL. Dalej przedstawione są: kolorowanie kodu, automatyczne wcięcia, dopasowanie nawiasów oraz kwestie związane z obsługą podpowiedzi. W kolejnej części ukazano zagadnienia związane z przetwarzaniem kodu PDDL, czyli wykrywanie błędów składniowych i semantycznych oraz podpowiadanie kodu. Na końcu omówiono współpracę wtyczki z oprogramowaniem wyznaczającym plan, jego konfigurację i uruchamianie, a także przerywanie procesu planowania.
 
 W rozdziale siódmym opisane są testy jednostkowe kodu oraz gramatyk formalnych. Dodatkowo przedstawiono testy akceptacyjne.
 
